--- a/frontend-librarie/index.html
+++ b/frontend-librarie/index.html
@@ -5,15 +5,13 @@
     <link rel="icon" type="image/user" href="/user.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aurélie Moustardier - Portfolio</title>
-    <meta key="title" content="Vite + NextUI" property="og:title" />
-    <meta content="Make beautiful websites regardless of your design experience." property="og:description" />
-    <meta content="Make beautiful websites regardless of your design experience." name="description" />
+    <meta key="title" content="Portfolio Aurelie" property="og:title" />
     <meta
       key="viewport"
       content="viewport-fit=cover, width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
       name="viewport"
     />
-    <link href="/favicon.ico" rel="icon" />
+    <link href="/user.svg" rel="icon" />
   </head>
   <body>
     <div id="root"></div>
