modif importation image

--- a/frontend-librarie/index.html
+++ b/frontend-librarie/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/user" href="/user.svg" />
+    <link rel="icon" type="image/user" href="./src/image/user.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aurélie Moustardier - Portfolio</title>
     <meta key="title" content="Portfolio Aurelie" property="og:title" />
