modif importation icone site

--- a/frontend-librarie/index.html
+++ b/frontend-librarie/index.html
@@ -11,10 +11,10 @@
       content="viewport-fit=cover, width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
       name="viewport"
     />
-    <link href="/user.svg" rel="icon" />
+    <link href="./src/image/user.svg" rel="icon" />
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="./src/main.tsx"></script>
   </body>
 </html>
