modif importation image avec fichiers assets

--- a/frontend-librarie/index.html
+++ b/frontend-librarie/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/user" href="./src/image/user.svg" />
+    <link rel="icon" type="image/user" href="./src/assets/image/user.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aurélie Moustardier - Portfolio</title>
     <meta key="title" content="Portfolio Aurelie" property="og:title" />
@@ -11,7 +11,7 @@
       content="viewport-fit=cover, width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
       name="viewport"
     />
-    <link href="./src/image/user.svg" rel="icon" />
+    <link href="./src/assets/image/user.svg" rel="icon" />
   </head>
   <body>
     <div id="root"></div>
