--- a/frontend-librarie/index.html
+++ b/frontend-librarie/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/user" href="./src/assets/image/user.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Aurélie Moustardier - Portfolio</title>
+    <title>lina</title>
     <meta key="title" content="Portfolio Aurelie" property="og:title" />
     <meta
       key="viewport"
@@ -15,6 +15,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="./src/main.tsx"></script>
+    <script type="module" src="./src/index.tsx"></script>
   </body>
 </html>
